Fix the index link in the menu

--- a/_layouts/lumeh.html
+++ b/_layouts/lumeh.html
@@ -16,7 +16,7 @@
   <nav>
     <p id="welcome">&nbsp;</p>
     <ul id="navigation-menu">
-      <li><a href="/">index</a></li><!--
+      <li><a href="//lumeh.org/">index</a></li><!--
       --><li><a href="/">blog</a></li><!--
       --><li><a href="//lumeh.org/music.html">music</a></li><!--
       --><li><a href="//lumeh.org/projects/">projects</a></li><!--
