--- a/_layouts/lumeh.html
+++ b/_layouts/lumeh.html
@@ -29,8 +29,12 @@
   <article>
     <header>
       <h1 class="title">{{ page.title }}</h1>
+{% if page.author %}
       <span class="author">by {{ page.author }}</span>
-      <span class="date">on {{ page.date }}</span>
+{% endif %}
+{% if page.date %}
+      <span class="date">on {{ page.date | date_to_string }}</span>
+{% endif %}
     </header>
 
 {{ content }}
@@ -45,10 +49,10 @@
 {% for comment in page.comments %}
       <article>
         <header>
-          <h3>Comment by <span class="author">{{ comment.name }}</span></h3>
+          <h3>Comment by <span class="author">{{ comment.author }}</span></h3>
         </header>
 
-{{ comment.content }}
+{{ comment.content | markdownify }}
 
       </article>
 {% endfor %}
