Make "Add a comment" open in a new tab

--- a/_layouts/lumeh.html
+++ b/_layouts/lumeh.html
@@ -43,7 +43,7 @@
       <header>
         <p>
           <strong>Comments</strong> —
-          <a href="https://github.com/kalgynirae/blog/edit/gh-pages/{{ page.path }}">Add a comment</a>
+          <a href="https://github.com/kalgynirae/blog/edit/gh-pages/{{ page.path }}" target="_blank">Add a comment</a>
         </p>
       </header>
 {% for comment in page.comments %}
